<resources>
    <string name="app_name">Coinz</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login and register-->
    <string name="access_token">pk.eyJ1Ijoic2Vhbm11bGxhbiIsImEiOiJjam52czByYzMwZ21yM2tvYjlhaTVzZ2tlIn0.kIydMAAEwfMV1ORU7bP1aA</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="btn_login">Log in</string>
    <string name="btn_not_a_member">Not a member? Register here</string>
    <string name="btn_register">Register</string>
    <string name="btn_already_member">Already a member? Log in here </string>
    <string name="btn_forgot_password">Forgot password?</string>
    <string name="auth_failed">Incorrect email or password</string>
    <string name="error_password_short">Password too short, enter minimum 6 characters</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="forgot_password_msg">Please enter your email to reset your password</string>
    <string name="password_reset_msg">We have sent you an email to reset your password</string>
    <string name="password_reset_failed">Failed to send reset email</string>
    <string name="title_map">Map</string>
    <string name="title_friends">Friends</string>
    <string name="title_bank">Bank</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_bank">Bank</string>
    <string name="title_activity_wallet">Wallet</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="required_field_username">Enter username</string>
    <string name="required_field_email">Enter email address</string>
    <string name="required_field_password">Enter password</string>
    <string name="registration_success">User successfully registered</string>
    <string name="registration_fail">Registration failed</string>
    <string name="reset_email">Enter your registered email address</string>
    <string name="user_null_pointer">User not logged in</string>
    <string name="msgCoinAddFailure">Failed to process data, please check your internet connection and restart the application</string>
    <string name="title_activity_testtab">testtab</string>
    <string name="tab_text_collected">Collected</string>
    <string name="tab_text_received">Received</string>
    <string name="action_settings">Settings</string>
    <string name="msg_friend_request">Friend request sent!</string>
    <string name="msg_add_friend_failed">Failed to send friend request</string>
    <string name="msg_user_adding_self">You can\'t add yourself as a friend</string>
    <string name="msg_friend_already_exists">You already have this user as a friend</string>
    <string name="msg_request_already_exists">This user has already sent you a friend request</string>
    <string name="msg_wait_on_transfer_completion">Please wait until current transfer completes</string>
    <string name="msg_select_transfer_option">Please select a transfer option</string>
    <string name="msg_25_coin_limit">You cannot transfer more than 25 collected coins per day!</string>
    <string name="msg_please_select_coins">Please select coins to send</string>
    <string name="msg_transfer_complete">Transfer complete</string>
    <string name="msg_failed_to_transfer">Failed to transfer</string>
    <string name="msg_select_friend">Please select a friend</string>
    <string name="msg_successfully_sent_coins">Successfully sent coins to </string>
    <string name="msg_failed_to_send">Failed to send</string>
    <string name="msg_please_enable_permissions">Please enable permissions for this application</string>
    <string name="msg_requires_permissions">This application requires the following permissions:</string>
    <string name="msg_username_already_exists">Username already exists, please try another</string>
    <string name="msg_failed_to_create_account">Failed to create account, please try again</string>
    <string name="msg_double_value">$$$ DOUBLE VALUE $$$</string>
    <string name="msg_time_up">Time is up!</string>

</resources>
